Modificações, video padrao